--- a/index.html
+++ b/index.html
@@ -12,9 +12,47 @@
     <div class="root">
         <div class="arenas arena1">
             <div class="control">
-                <button class="button">
-                    Random
-                </button>
+                <form class="control">
+                    <div class="inputWrap">
+                        <h2>HIT</h2>
+                        <div>
+                            <input type="radio" name="hit" value="head" id="headHit" required>
+                            <label for="headHit">
+                                <h3>HEAD</h3>
+                            </label>
+                            <input type="radio" name="hit" value="body" id="bodyHit" required>
+                            <label for="bodyHit">
+                                <h3>BODY</h3>
+                            </label>
+                            <input type="radio" name="hit" value="foot" id="footHit" required>
+                            <label for="footHit">
+                                <h3>FOOT</h3>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="inputWrap">
+                        <h2>DEFENCE</h2>
+                        <div>
+                            <input type="radio" name="defence" value="head" id="headDefence" required>
+                            <label for="headDefence">
+                                <h3>HEAD</h3>
+                            </label>
+                            <input type="radio" name="defence" value="body" id="bodyDefence" required>
+                            <label for="bodyDefence">
+                                <h3>BODY</h3>
+                            </label>
+                            <input type="radio" name="defence" value="foot" id="footDefence" required>
+                            <label for="footDefence">
+                                <h3>FOOT</h3>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="buttonWrap">
+                        <button class="button" type="submit">
+                            Fight
+                        </button>
+                    </div>
+                </form>
             </div>
         </div>
         <div class="chat"></div>
