--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="root">
         <div class="arenas arena1">
             <div class="control">
-                <form class="control">
+                <form class="control form">
                     <div class="inputWrap">
                         <h2>HIT</h2>
                         <div>
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                     <div class="buttonWrap">
-                        <button class="button" type="submit">
+                        <button class="button btn-submit" type="submit">
                             Fight
                         </button>
                     </div>
