--- a/index.html
+++ b/index.html
@@ -15,35 +15,35 @@
                 <form class="control form">
                     <div class="inputWrap">
                         <h2>HIT</h2>
-                        <div>
+                        <div class="ul">
                             <input type="radio" name="hit" value="head" id="headHit" required>
                             <label for="headHit">
-                                <h3>HEAD</h3>
+                                <span>HEAD</span>
                             </label>
                             <input type="radio" name="hit" value="body" id="bodyHit" required>
                             <label for="bodyHit">
-                                <h3>BODY</h3>
+                                <span>BODY</span>
                             </label>
                             <input type="radio" name="hit" value="foot" id="footHit" required>
                             <label for="footHit">
-                                <h3>FOOT</h3>
+                                <span>FOOT</span>
                             </label>
                         </div>
                     </div>
                     <div class="inputWrap">
                         <h2>DEFENCE</h2>
-                        <div>
+                        <div class="ul">
                             <input type="radio" name="defence" value="head" id="headDefence" required>
                             <label for="headDefence">
-                                <h3>HEAD</h3>
+                                <span>HEAD</span>
                             </label>
                             <input type="radio" name="defence" value="body" id="bodyDefence" required>
                             <label for="bodyDefence">
-                                <h3>BODY</h3>
+                                <span>BODY</span>
                             </label>
                             <input type="radio" name="defence" value="foot" id="footDefence" required>
                             <label for="footDefence">
-                                <h3>FOOT</h3>
+                                <span>FOOT</span>
                             </label>
                         </div>
                     </div>
