--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 <body>
     <div class="root">
+      <div class="popup">
+          <div class="title">
+              SELECT YOUR FIGHTERS
+          </div>
+          <div class="parent"></div>
+
+          <div class="player-avatar"></div>
+          <div class="avatar1"></div>
+          <div class="avatar2"></div>
+
+      </div>
+
         <div class="arenas arena1">
             <div class="control">
                 <form class="control form">
